--- a/web/package.json
+++ b/web/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.7",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-email": "^1.9.5",
+    "resend": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "latest",
