--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-email/components": "^0.0.7",
+    "@vercel/analytics": "^1.1.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
