--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-email/components": "^0.0.7",
-    "@tldraw/tldraw": "^2.0.0-alpha.19",
+    "@tldraw/tldraw": "^2.0.0-canary.0171d1498d43",
     "@vercel/analytics": "^1.1.0",
     "next": "latest",
     "react": "latest",
